--- a/package.json
+++ b/package.json
@@ -1,26 +1,6 @@
 {
   "name": "the-food-vault",
   "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview --port 5050",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
-  },
-  "dependencies": {
-    "vue": "^3.2.31",
-    "vue-router": "^4.0.14"
-  },
-  "devDependencies": {
-    "@rushstack/eslint-patch": "^1.1.0",
-    "@vitejs/plugin-vue": "^2.3.1",
-    "@vitejs/plugin-vue-jsx": "^1.3.9",
-    "@vue/eslint-config-prettier": "^7.0.0",
-    "eslint": "^8.5.0",
-    "eslint-plugin-vue": "^8.2.0",
-    "prettier": "^2.5.1",
-    "vite": "^2.9.1"
-  },
   "description": "This template should help get you started developing with Vue 3 in Vite.",
   "main": "app.js",
   "repository": {
@@ -32,5 +12,139 @@
   "bugs": {
     "url": "https://github.com/MadMoose02/The-Food-Vault/issues"
   },
-  "homepage": "https://github.com/MadMoose02/The-Food-Vault#readme"
+  "homepage": "https://github.com/MadMoose02/The-Food-Vault#readme",
+  "devDependencies": {},
+  "dependencies": {
+    "acorn": "^8.7.0",
+    "acorn-jsx": "^5.3.2",
+    "ansi-regex": "^5.0.1",
+    "ajv": "^6.12.6",
+    "balanced-match": "^1.0.2",
+    "ansi-styles": "^3.2.1",
+    "brace-expansion": "^1.1.11",
+    "argparse": "^2.0.1",
+    "callsites": "^3.1.0",
+    "caniuse-lite": "^1.0.30001324",
+    "browserslist": "^4.20.2",
+    "camelcase": "^6.3.0",
+    "chalk": "^2.4.2",
+    "color-convert": "^1.9.3",
+    "color-name": "^1.1.3",
+    "concat-map": "^0.0.1",
+    "debug": "^4.3.4",
+    "cross-spawn": "^7.0.3",
+    "csstype": "^2.6.20",
+    "esbuild-darwin-64": "^0.14.30",
+    "convert-source-map": "^1.8.0",
+    "electron-to-chromium": "^1.4.103",
+    "esbuild": "^0.14.30",
+    "doctrine": "^3.0.0",
+    "escape-string-regexp": "^1.0.5",
+    "escalade": "^3.1.1",
+    "eslint": "^8.12.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^8.5.0",
+    "eslint-scope": "^7.1.1",
+    "eslint-visitor-keys": "^3.3.0",
+    "eslint-utils": "^3.0.0",
+    "espree": "^9.3.1",
+    "estraverse": "^5.3.0",
+    "esquery": "^1.4.0",
+    "estree-walker": "^2.0.2",
+    "esrecurse": "^4.3.0",
+    "esutils": "^2.0.3",
+    "fast-deep-equal": "^3.1.3",
+    "fast-diff": "^1.2.0",
+    "fast-json-stable-stringify": "^2.1.0",
+    "file-entry-cache": "^6.0.1",
+    "fast-levenshtein": "^2.0.6",
+    "flat-cache": "^3.0.4",
+    "flatted": "^3.2.5",
+    "fs.realpath": "^1.0.0",
+    "fsevents": "^2.3.2",
+    "function-bind": "^1.1.1",
+    "gensync": "^1.0.0-beta.2",
+    "functional-red-black-tree": "^1.0.1",
+    "globals": "^11.12.0",
+    "glob": "^7.2.0",
+    "glob-parent": "^6.0.2",
+    "has-flag": "^3.0.0",
+    "hash-sum": "^2.0.0",
+    "has": "^1.0.3",
+    "import-fresh": "^3.3.0",
+    "ignore": "^5.2.0",
+    "html-tags": "^3.1.0",
+    "deep-is": "^0.1.4",
+    "imurmurhash": "^0.1.4",
+    "is-extglob": "^2.1.1",
+    "inherits": "^2.0.4",
+    "is-glob": "^4.0.3",
+    "js-tokens": "^4.0.0",
+    "jsesc": "^2.5.2",
+    "isexe": "^2.0.0",
+    "is-core-module": "^2.8.1",
+    "json-stable-stringify-without-jsonify": "^1.0.1",
+    "js-yaml": "^4.1.0",
+    "json-schema-traverse": "^0.4.1",
+    "levn": "^0.4.1",
+    "json5": "^2.2.1",
+    "lodash": "^4.17.21",
+    "lodash.merge": "^4.6.2",
+    "lru-cache": "^6.0.0",
+    "minimatch": "^3.1.2",
+    "magic-string": "^0.25.9",
+    "ms": "^2.1.2",
+    "natural-compare": "^1.4.0",
+    "once": "^1.4.0",
+    "node-releases": "^2.0.2",
+    "optionator": "^0.9.1",
+    "parent-module": "^1.0.1",
+    "path-is-absolute": "^1.0.1",
+    "path-key": "^3.1.1",
+    "path-parse": "^1.0.7",
+    "picocolors": "^1.0.0",
+    "postcss": "^8.4.12",
+    "nanoid": "^3.3.2",
+    "picomatch": "^2.3.1",
+    "prelude-ls": "^1.2.1",
+    "prettier-linter-helpers": "^1.0.0",
+    "punycode": "^2.1.1",
+    "prettier": "^2.6.2",
+    "regexpp": "^3.2.0",
+    "resolve-from": "^4.0.0",
+    "resolve": "^1.22.0",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.70.1",
+    "safe-buffer": "^5.1.2",
+    "shebang-command": "^2.0.0",
+    "source-map": "^0.6.1",
+    "shebang-regex": "^3.0.0",
+    "source-map-js": "^1.0.2",
+    "sourcemap-codec": "^1.4.8",
+    "strip-ansi": "^6.0.1",
+    "strip-json-comments": "^3.1.1",
+    "supports-color": "^5.5.0",
+    "svg-tags": "^1.0.0",
+    "supports-preserve-symlinks-flag": "^1.0.0",
+    "to-fast-properties": "^2.0.0",
+    "text-table": "^0.2.0",
+    "type-check": "^0.4.0",
+    "type-fest": "^0.20.2",
+    "uri-js": "^4.4.1",
+    "v8-compile-cache": "^2.3.0",
+    "vite": "^2.9.1",
+    "vue": "^3.2.31",
+    "vue-router": "^4.0.14",
+    "vue-eslint-parser": "^8.3.0",
+    "wrappy": "^1.0.2",
+    "semver": "^6.3.0",
+    "which": "^2.0.2",
+    "yallist": "^4.0.0",
+    "inflight": "^1.0.6",
+    "word-wrap": "^1.2.3"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  }
 }
