--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "the-food-vault",
   "version": "0.0.0",
-  "description": "This template should help get you started developing with Vue 3 in Vite.",
+  "description": "INFO 1601 Final Project 'The Food Vault' by Team Kil-A-Bytes",
   "main": "app.js",
   "repository": {
     "type": "git",
