--- a/package.json
+++ b/package.json
@@ -13,131 +13,128 @@
     "url": "https://github.com/MadMoose02/The-Food-Vault/issues"
   },
   "homepage": "https://github.com/MadMoose02/The-Food-Vault#readme",
-  "devDependencies": {},
   "dependencies": {
     "acorn": "^8.7.0",
     "acorn-jsx": "^5.3.2",
-    "ansi-regex": "^5.0.1",
     "ajv": "^6.12.6",
-    "balanced-match": "^1.0.2",
+    "ansi-regex": "^5.0.1",
     "ansi-styles": "^3.2.1",
-    "brace-expansion": "^1.1.11",
     "argparse": "^2.0.1",
-    "callsites": "^3.1.0",
-    "caniuse-lite": "^1.0.30001324",
+    "balanced-match": "^1.0.2",
+    "brace-expansion": "^1.1.11",
     "browserslist": "^4.20.2",
+    "callsites": "^3.1.0",
     "camelcase": "^6.3.0",
+    "caniuse-lite": "^1.0.30001324",
     "chalk": "^2.4.2",
     "color-convert": "^1.9.3",
     "color-name": "^1.1.3",
     "concat-map": "^0.0.1",
-    "debug": "^4.3.4",
+    "convert-source-map": "^1.8.0",
     "cross-spawn": "^7.0.3",
     "csstype": "^2.6.20",
-    "esbuild-darwin-64": "^0.14.30",
-    "convert-source-map": "^1.8.0",
-    "electron-to-chromium": "^1.4.103",
-    "esbuild": "^0.14.30",
+    "debug": "^4.3.4",
+    "deep-is": "^0.1.4",
     "doctrine": "^3.0.0",
-    "escape-string-regexp": "^1.0.5",
+    "electron-to-chromium": "^1.4.103",
+    "esbuild-darwin-64": "^0.14.30",
     "escalade": "^3.1.1",
-    "eslint": "^8.12.0",
+    "escape-string-regexp": "^1.0.5",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.5.0",
     "eslint-scope": "^7.1.1",
-    "eslint-visitor-keys": "^3.3.0",
     "eslint-utils": "^3.0.0",
+    "eslint-visitor-keys": "^3.3.0",
     "espree": "^9.3.1",
-    "estraverse": "^5.3.0",
     "esquery": "^1.4.0",
-    "estree-walker": "^2.0.2",
     "esrecurse": "^4.3.0",
+    "estraverse": "^5.3.0",
+    "estree-walker": "^2.0.2",
     "esutils": "^2.0.3",
     "fast-deep-equal": "^3.1.3",
     "fast-diff": "^1.2.0",
     "fast-json-stable-stringify": "^2.1.0",
-    "file-entry-cache": "^6.0.1",
     "fast-levenshtein": "^2.0.6",
+    "file-entry-cache": "^6.0.1",
     "flat-cache": "^3.0.4",
     "flatted": "^3.2.5",
     "fs.realpath": "^1.0.0",
     "fsevents": "^2.3.2",
     "function-bind": "^1.1.1",
-    "gensync": "^1.0.0-beta.2",
     "functional-red-black-tree": "^1.0.1",
-    "globals": "^11.12.0",
+    "gensync": "^1.0.0-beta.2",
     "glob": "^7.2.0",
     "glob-parent": "^6.0.2",
+    "globals": "^11.12.0",
+    "has": "^1.0.3",
     "has-flag": "^3.0.0",
     "hash-sum": "^2.0.0",
-    "has": "^1.0.3",
-    "import-fresh": "^3.3.0",
-    "ignore": "^5.2.0",
     "html-tags": "^3.1.0",
-    "deep-is": "^0.1.4",
+    "ignore": "^5.2.0",
+    "import-fresh": "^3.3.0",
     "imurmurhash": "^0.1.4",
-    "is-extglob": "^2.1.1",
+    "inflight": "^1.0.6",
     "inherits": "^2.0.4",
-    "is-glob": "^4.0.3",
-    "js-tokens": "^4.0.0",
-    "jsesc": "^2.5.2",
-    "isexe": "^2.0.0",
     "is-core-module": "^2.8.1",
-    "json-stable-stringify-without-jsonify": "^1.0.1",
+    "is-extglob": "^2.1.1",
+    "is-glob": "^4.0.3",
+    "isexe": "^2.0.0",
+    "js-tokens": "^4.0.0",
     "js-yaml": "^4.1.0",
+    "jsesc": "^2.5.2",
     "json-schema-traverse": "^0.4.1",
-    "levn": "^0.4.1",
+    "json-stable-stringify-without-jsonify": "^1.0.1",
     "json5": "^2.2.1",
+    "levn": "^0.4.1",
     "lodash": "^4.17.21",
     "lodash.merge": "^4.6.2",
     "lru-cache": "^6.0.0",
-    "minimatch": "^3.1.2",
     "magic-string": "^0.25.9",
+    "minimatch": "^3.1.2",
     "ms": "^2.1.2",
+    "nanoid": "^3.3.2",
     "natural-compare": "^1.4.0",
-    "once": "^1.4.0",
     "node-releases": "^2.0.2",
+    "once": "^1.4.0",
     "optionator": "^0.9.1",
     "parent-module": "^1.0.1",
     "path-is-absolute": "^1.0.1",
     "path-key": "^3.1.1",
     "path-parse": "^1.0.7",
     "picocolors": "^1.0.0",
-    "postcss": "^8.4.12",
-    "nanoid": "^3.3.2",
     "picomatch": "^2.3.1",
+    "postcss": "^8.4.12",
     "prelude-ls": "^1.2.1",
+    "prettier": "^2.6.2",
     "prettier-linter-helpers": "^1.0.0",
     "punycode": "^2.1.1",
-    "prettier": "^2.6.2",
     "regexpp": "^3.2.0",
-    "resolve-from": "^4.0.0",
     "resolve": "^1.22.0",
+    "resolve-from": "^4.0.0",
     "rimraf": "^3.0.2",
     "safe-buffer": "^5.1.2",
+    "semver": "^6.3.0",
     "shebang-command": "^2.0.0",
-    "source-map": "^0.6.1",
     "shebang-regex": "^3.0.0",
+    "source-map": "^0.6.1",
     "source-map-js": "^1.0.2",
     "sourcemap-codec": "^1.4.8",
     "strip-ansi": "^6.0.1",
     "strip-json-comments": "^3.1.1",
     "supports-color": "^5.5.0",
-    "svg-tags": "^1.0.0",
     "supports-preserve-symlinks-flag": "^1.0.0",
-    "to-fast-properties": "^2.0.0",
+    "svg-tags": "^1.0.0",
     "text-table": "^0.2.0",
+    "to-fast-properties": "^2.0.0",
     "type-check": "^0.4.0",
     "type-fest": "^0.20.2",
     "uri-js": "^4.4.1",
     "v8-compile-cache": "^2.3.0",
-    "wrappy": "^1.0.2",
-    "semver": "^6.3.0",
     "which": "^2.0.2",
-    "yallist": "^4.0.0",
-    "inflight": "^1.0.6",
-    "word-wrap": "^1.2.3"
+    "word-wrap": "^1.2.3",
+    "wrappy": "^1.0.2",
+    "yallist": "^4.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
