--- a/package.json
+++ b/package.json
@@ -135,7 +135,8 @@
     "yallist": "^4.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node /yarael_poof/index.js"
   },
   "engines": {
     "node": ">=16.x"
