--- a/package.json
+++ b/package.json
@@ -136,7 +136,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node /yarael_poof/index.js"
+    "start": "cd yarael_poof && node index.js"
   },
   "engines": {
     "node": ">=16.x"
