--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "debug": "^4.3.4",
     "deep-is": "^0.1.4",
     "doctrine": "^3.0.0",
+    "dotenv": "^8.2.0",
     "electron-to-chromium": "^1.4.103",
     "escalade": "^3.1.1",
     "escape-string-regexp": "^1.0.5",
@@ -51,6 +52,7 @@
     "estraverse": "^5.3.0",
     "estree-walker": "^2.0.2",
     "esutils": "^2.0.3",
+    "express": "^4.17.1",
     "fast-deep-equal": "^3.1.3",
     "fast-diff": "^1.2.0",
     "fast-json-stable-stringify": "^2.1.0",
@@ -93,6 +95,7 @@
     "ms": "^2.1.2",
     "nanoid": "^3.3.2",
     "natural-compare": "^1.4.0",
+    "nocodb": "^0.0.1",
     "node-releases": "^2.0.2",
     "once": "^1.4.0",
     "optionator": "^0.9.1",
@@ -136,7 +139,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cd yarael_poof && node index.js"
+    "start": "node index.js",
+    "upgrade": "npm uninstall --save nocodb && npm install --save nocodb"
   },
   "engines": {
     "node": ">=16.x"
