--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "the-food-vault",
   "version": "0.0.0",
   "description": "INFO 1601 Final Project 'The Food Vault' by Team Kil-A-Bytes",
-  "main": "app.js",
+  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/MadMoose02/The-Food-Vault.git"
@@ -139,8 +139,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "upgrade": "npm uninstall --save nocodb && npm install --save nocodb"
+    "start": "node index.js"
   },
   "engines": {
     "node": ">=16.x"
